--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/icoder/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
