--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/icoder/index.html">Home</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link " href="/about.html">About</a>
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/icoder/contact.html">Contact Us</a>
                     </li>
 
                 </ul>
